.provarCaches/00D5f000005vwGkEAI/objects/rstk__soconrcprice__c.object
<CustomObject>
    <description>soconrcprice__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soconrcprice_soconrc__r.rstk__externalid__c &amp;&apos;_&apos;&amp;  TEXT( rstk__soconrcprice_frdate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soconrcprice_soconrc__r.rstk__soconrc_soprod__r.rstk__soprod_prod__c &amp;&apos;(&apos;&amp; TEXT( rstk__soconrcprice_frdate__c ) &amp;&apos;_&apos;&amp;   TEXT( rstk__soconrcprice_todate__c ) &amp;&apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcprice_billpdprice__c</fullName>
        <formula>CASE(rstk__soconrcprice_soconrc__r.rstk__soconrc_priceuom__c, 

     &apos;Monthly&apos;, CASE(rstk__soconrcprice_soconrc__r.rstk__soconrc_socontract__r.rstk__socontract_rcbfreq__c, 

				&apos;Monthly&apos;, rstk__soconrcprice_price__c ,

				&apos;Quarterly&apos;, rstk__soconrcprice_price__c * 3,

				&apos;Semi-Annual&apos;,rstk__soconrcprice_price__c * 6,
    
				&apos;Annual&apos;,rstk__soconrcprice_price__c * 12,

      
		 0),


     &apos;Quarterly&apos;, CASE(rstk__soconrcprice_soconrc__r.rstk__soconrc_socontract__r.rstk__socontract_rcbfreq__c, 

				&apos;Monthly&apos;, rstk__soconrcprice_price__c / 3,

				&apos;Quarterly&apos;, rstk__soconrcprice_price__c,

				&apos;Semi-Annual&apos;,rstk__soconrcprice_price__c * 2,
    
				&apos;Annual&apos;,rstk__soconrcprice_price__c * 4,

      
		 0),


     &apos;Semi-Annual&apos;,CASE(rstk__soconrcprice_soconrc__r.rstk__soconrc_socontract__r.rstk__socontract_rcbfreq__c, 

				&apos;Monthly&apos;, rstk__soconrcprice_price__c / 6,

				&apos;Quarterly&apos;, rstk__soconrcprice_price__c / 2,

				&apos;Semi-Annual&apos;,rstk__soconrcprice_price__c,
    
				&apos;Annual&apos;,rstk__soconrcprice_price__c * 2,

      
		 0),

    
     &apos;Annual&apos;,CASE(rstk__soconrcprice_soconrc__r.rstk__soconrc_socontract__r.rstk__socontract_rcbfreq__c, 

				&apos;Monthly&apos;, rstk__soconrcprice_price__c / 12,

				&apos;Quarterly&apos;, rstk__soconrcprice_price__c / 4,

				&apos;Semi-Annual&apos;,rstk__soconrcprice_price__c /2,
    
				&apos;Annual&apos;,rstk__soconrcprice_price__c,

      
		 0),

      
     0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Periodic Price used for billings that fall within this date range.</inlineHelpText>
        <label>Billing Period Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcprice_frdate__c</fullName>
        <inlineHelpText>Recurring billings that occur on or after this date through the Last Effective Date, will use the Periodic Price set for this row.</inlineHelpText>
        <label>First Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcprice_price__c</fullName>
        <inlineHelpText>The Periodic Price used when within the given date range.</inlineHelpText>
        <label>Periodic Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcprice_soconrc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Contract Recurring Charge</label>
        <referenceTo>rstk__soconrc__c</referenceTo>
        <relationshipLabel>Date Effective Pricing</relationshipLabel>
        <relationshipName>soconrcprices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcprice_todate__c</fullName>
        <inlineHelpText>Recurring billings that occur on or after the First Effective Date through this date, will use the Periodic Price set for this row.</inlineHelpText>
        <label>Last Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Recurring Charge Date Effective Pricing</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Recurring_Charges_Date_Effective_Pricing</fullName>
        <columns>NAME</columns>
        <columns>rstk__soconrcprice_soconrc__c</columns>
        <columns>rstk__soconrcprice_price__c</columns>
        <columns>rstk__soconrcprice_billpdprice__c</columns>
        <columns>rstk__soconrcprice_frdate__c</columns>
        <columns>rstk__soconrcprice_todate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Recurring Charges Date Effective Pricing</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Charges Date Effective Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__First_Effective_Date</fullName>
        <active>true</active>
        <description>First Effective Date is Required and not modifiable.</description>
        <errorConditionFormula>ISBLANK(rstk__soconrcprice_frdate__c  ) || (! ISNEW() &amp;&amp;  ISCHANGED(rstk__soconrcprice_frdate__c ) )</errorConditionFormula>
        <errorMessage>First Effective Date is Required and not modifiable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Last_Effective_Date</fullName>
        <active>true</active>
        <description>Last Effective Date is Required , not modifiable and should not be less than First Effective Date.</description>
        <errorConditionFormula>ISBLANK(rstk__soconrcprice_todate__c  )  || (! ISNEW() &amp;&amp;  ISCHANGED(rstk__soconrcprice_todate__c  ) ) || rstk__soconrcprice_todate__c  &lt; rstk__soconrcprice_frdate__c</errorConditionFormula>
        <errorMessage>Last Effective Date is Required , not modifiable and should not be less than First Effective Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Periodic_Price</fullName>
        <active>true</active>
        <description>Periodic Price must be greater than zero.</description>
        <errorConditionFormula>rstk__soconrcprice_price__c &lt;= 0</errorConditionFormula>
        <errorMessage>Periodic Price must be greater than zero.</errorMessage>
    </validationRules>
</CustomObject>